--- a/themes/material-design/layouts/_default/single.html
+++ b/themes/material-design/layouts/_default/single.html
@@ -13,7 +13,7 @@
             {{ range $index, $category := .Params.categories }}
               <a href="{{$baseurl}}/categories/{{ $category | urlize }}/">{{ $category }}</a>
             {{ end }}
-          {{end}} 
+          {{end}}
           </p>
           <p>{{ .Content }}</p>
           <p>{{ .Date.Format "2 Jan 2006" }}
@@ -27,7 +27,22 @@
             {{ partial "disqus.html" . }}
           {{ end }}
           {{ with .Site.Params.duoshuo }}
-            {{ partial "duoshuo.html" . }}
+            <!-- 多说评论框 start -->
+            <div class="ds-thread" data-thread-key="{{ $.RelPermalink }}" data-title="{{ $.Title }}" data-url="{{ $.Permalink }}"></div>
+            <!-- 多说评论框 end -->
+            <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+            <script type="text/javascript">
+            var duoshuoQuery = {short_name:"{{ . }}"};
+              (function() {
+                var ds = document.createElement('script');
+                ds.type = 'text/javascript';ds.async = true;
+                ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.unstable.js';
+                ds.charset = 'UTF-8';
+                (document.getElementsByTagName('head')[0]
+                  || document.getElementsByTagName('body')[0]).appendChild(ds);
+              })();
+            </script>
+            <!-- 多说公共JS代码 end -->
           {{ end }}
         </div>
       </div>
