update for Gitment

--- a/themes/material-design/layouts/_default/single.html
+++ b/themes/material-design/layouts/_default/single.html
@@ -53,7 +53,7 @@
             var gitment = new Gitment({
               id: "{{ $.RelPermalink }}", // 可选。默认为 location.href
               owner: "{{ $.Site.Params.gitment }}",
-              repo: 'https://github.com/gileshuang/hugo-build-repo',
+              repo: 'gileshuang.github.io',
               oauth: {
                 client_id: '30408b4f6463ecaf5d87',
                 client_secret: 'a81c6cda52d080e18f7a49762f625407d50b1815',
