--- a/themes/material-design/layouts/_default/single.html
+++ b/themes/material-design/layouts/_default/single.html
@@ -26,24 +26,6 @@
           {{ with .Site.DisqusShortname }}
             {{ partial "disqus.html" . }}
           {{ end }}
-          {{ with .Site.Params.duoshuo }}
-            <!-- 多说评论框 start -->
-            <div class="ds-thread" data-thread-key="{{ $.RelPermalink }}" data-title="{{ $.Title }}" data-url="{{ $.Permalink }}"></div>
-            <!-- 多说评论框 end -->
-            <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-            <script type="text/javascript">
-            var duoshuoQuery = {short_name:"{{ . }}"};
-              (function() {
-                var ds = document.createElement('script');
-                ds.type = 'text/javascript';ds.async = true;
-                ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.unstable.js';
-                ds.charset = 'UTF-8';
-                (document.getElementsByTagName('head')[0]
-                  || document.getElementsByTagName('body')[0]).appendChild(ds);
-              })();
-            </script>
-            <!-- 多说公共JS代码 end -->
-          {{ end }}
           <!-- Gitment 评论系统 -->
           {{ with .Site.Params.gitment }}
           <div id="gitment"></div>
@@ -52,8 +34,8 @@
           <script>
             var gitment = new Gitment({
               id: "{{ $.RelPermalink }}", // 可选。默认为 location.href
-              owner: "{{ $.Site.Params.gitment }}",
-              repo: 'gileshuang.github.io',
+              owner: "{{ $.Site.Params.gitment }}", // 页面所有者的 GitHub ID
+              repo: 'gileshuang.github.io', // 存储评论的 repo
               oauth: {
                 client_id: '30408b4f6463ecaf5d87',
                 client_secret: 'a81c6cda52d080e18f7a49762f625407d50b1815',
